correction css post validator, align item left inutile

--- a/style.css
+++ b/style.css
@@ -207,7 +207,6 @@ header nav .liens{
     margin: 20px 40px;
 }
 .content .populaires h3{
-    align-items: left;
     width: 90%;
     margin: 20px 10px;
 }
@@ -230,7 +229,6 @@ header nav .liens{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: left;
     box-shadow: 0 0 15px rgb(168, 167, 167);
     border-radius: 30px;
     width: 300px;
@@ -315,8 +313,7 @@ header nav .liens{
     width: 100%;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    margin: auto;
+    gap: 30px;
 }
 .activites figure{
     margin: 0;
@@ -339,7 +336,7 @@ header nav .liens{
     flex-direction: column;
     background-color: white;
     align-items: center;
-    width: 80%;
+    width: 100%;
     height: 100%;
     border-radius: 20px 20px 20px 20px;
 }
@@ -356,7 +353,7 @@ header nav .liens{
     background-color: white;
     justify-content: center;
     align-items: center;
-    width: 80%;
+    width: 100%;
     height: 50%;
     border-radius: 20px 20px 20px 20px;
 }
@@ -373,7 +370,7 @@ header nav .liens{
     background-color: white;
     justify-content: center;
     align-items: center;
-    width: 80%;
+    width: 100%;
     height: 40%;
     border-radius: 20px 20px 20px 20px;
 }
@@ -389,7 +386,7 @@ header nav .liens{
     flex-direction: column;
     background-color: white;
     align-items: center;
-    width: 80%;
+    width: 100%;
     height: 100%;
     border-radius: 20px 20px 20px 20px;
 }
@@ -406,7 +403,7 @@ header nav .liens{
     background-color: white;
     justify-content: center;
     align-items: center;
-    width: 80%;
+    width: 100%;
     height: 40%;
     border-radius: 20px 20px 20px 20px;
 }
@@ -423,7 +420,7 @@ header nav .liens{
     background-color: white;
     justify-content: center;
     align-items: center;
-    width: 80%;
+    width: 100%;
     height: 50%;
     border-radius: 20px 20px 20px 20px;
 }
@@ -439,32 +436,36 @@ header nav .liens{
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    width: 50%;
+    width: 45%;
     height: 100%;
+    margin: auto;
 }
 #activitescolumn2{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    width: 50%;
+    width: 45%;
     height: 100%;
+    margin: auto;
 }
 #activitescolumn3{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    width: 50%;
+    width: 45%;
     height: 100%;
+    margin: auto;
 }
 #activitescolumn4{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    width: 50%;
+    width: 45%;
     height: 100%;
+    margin: auto;
 }
 section h2{
     margin-left: 40px;
